# gmix-obsplugin

./: .gitignore  README.md
WIN32/: CMakeLists.txt  README.md  setup.bat
WIN32/etc/: DEV_NOTES.md
WIN32/proxy_dll/: capture_main.cpp  generate_def.ps1  gl_dx_interop_capture.cpp  gl_dx_interop_capture.hpp  inject.cpp  inline_hook.cpp  inline_hook.hpp  opengl32_proxy.cpp  proxy_common.hpp
WIN32/shaders/: blend.hlsl
WIN32/src/: cli.cpp  cli.hpp  gmix.hpp  main.cpp
WIN32/src/blend/: BlendConfig.hpp  blend_engine.cpp  blend_engine.hpp  weight_generator.cpp  weight_generator.hpp
WIN32/src/d3d11/: context.cpp  context.hpp
WIN32/src/ipc/: frame_protocol.hpp  frame_receiver.cpp  frame_receiver.hpp  frame_sender.cpp  frame_sender.hpp  imported_frame.cpp  imported_frame.hpp
WIN32/src/obs_plugin/: gmix_source.cpp
WIN32/tests/: synthetic_producer.cpp  test_blend_engine.cpp  test_ipc.cpp  test_macros.hpp  test_weight_generator.cpp
linux-x86_64/: CMakeLists.txt  Licencse  README.md
linux-x86_64/config/: gmix_config.ini  gmix_launch.sh
linux-x86_64/data/locale/: en-US.ini
linux-x86_64/etc/: DEV_NOTES.md  PIPELINE.md  note.txt  workflow.html
linux-x86_64/layer/: VkLayer_GMIX.json  layer_entry.cpp
linux-x86_64/shaders/: blend.comp  cursor_path_blur.comp  resample_blur.comp
linux-x86_64/src/: cli.cpp  cli.hpp  gmix.hpp  main.cpp
linux-x86_64/src/blend/: BlendConfig.hpp  blend_engine.cpp  blend_engine.hpp  weight_generator.cpp  weight_generator.hpp
linux-x86_64/src/capture/: FrameSource.hpp  LayerIpc.cpp  LayerIpc.hpp  VulkanLayerCapture.cpp
linux-x86_64/src/ipc/: frame_protocol.hpp  frame_receiver.cpp  frame_receiver.hpp  frame_sender.cpp  frame_sender.hpp  imported_frame.cpp  imported_frame.hpp  ipc_client.cpp
linux-x86_64/src/obs_plugin/: gmix_source.cpp
linux-x86_64/src/vulkan/: context.cpp  context.hpp
linux-x86_64/tests/: test_blend_engine.cpp  test_crossproc.cpp  test_ipc.cpp  test_macros.hpp  test_weight_generator.cpp
